<resources>
    <string name="app_name">FACTURA </string>
    <string name="nom_cli">Nombre Cliente</string>
    <string name="dni_cli">DNI</string>
    <string name="ser_inst">Servicio Instalacion</string>
    <string name="cos_ser">Costo Servicio</string>
    <string name="cos_inst">Costo Instalacion</string>
    <string name="desct">Descuento</string>
    <string name="total">Total a pagar</string>
    <string name="calcular">CALCULAR</string>
    <string name="imprimir">IMPRIMIR</string>
    <string name="regresar">REGRESAR</string>
    <string name="telf_int">Duo - Telefono e Internet</string>
    <string name="telf_tv_inter">Trio - Telefono + TV + Internet</string>
    <string name="internet">Solo Internet</string>
    <string name="tlefono">Solo Telefono</string>
    <string name="cable">Solo Cable</string>
    <string name="detalle">IMPRIMIR SERVICIO</string>
</resources>
