<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="DATOS DEL CLIENTE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/nom_cli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_nom_clie"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/dni_cli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_dni"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/ser_inst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView5"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:text="@string/telf_int"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rdb_duo" android:layout_weight="1"/>
            <RadioButton
                android:text="@string/telf_tv_inter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rdb_trio" android:layout_weight="1"/>
            <RadioButton
                android:text="@string/internet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rdb_inter" android:layout_weight="1"/>
            <RadioButton
                android:text="@string/tlefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rdb_tel" android:layout_weight="1"/>
            <RadioButton
                android:text="@string/cable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rdb_cable" android:layout_weight="1"/>
        </RadioGroup>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/cos_ser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView6"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/txt_cos_ser"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/cos_inst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView7"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/txt_cos_inst"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/desct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView8"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/txt_desc"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView9"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/txt_total"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:text="@string/calcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btn_calcular" android:onClick="calcular"/>
        <Button
            android:text="@string/imprimir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button" android:onClick="imprimir"/>
    </TableRow>
</LinearLayout>