<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".IMPRIMIR" android:paddingTop="70dp" android:paddingLeft="10dp" android:paddingRight="10dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/detalle"
            android:layout_width="wrap_content"

            android:layout_height="match_parent"
            android:id="@+id/textView" android:paddingLeft="110dp"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/nom_cli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView10"/>
        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tv_nom_clie" android:layout_marginLeft="45dp"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/dni_cli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView19"/>
        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tv_dni" android:layout_marginLeft="120dp"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/ser_inst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView20"/>
        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tv_serv_inst" android:layout_marginLeft="20dp"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/cos_inst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView21"/>
        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tv_cot_inst" android:layout_marginLeft="30dp"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/cos_ser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView22"/>
        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tv_cost_serv" android:layout_marginLeft="50dp"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/desct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView23"/>
        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tv_desc" android:layout_marginLeft="75dp"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="vertical">
        <TextView
            android:text="@string/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView24"/>
        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tv_total" android:layout_marginLeft="60dp"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:text="@string/regresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btn_regresar" android:layout_marginLeft="120dp"
            android:gravity="center_vertical"/>
    </TableRow>
</LinearLayout>